--- a/doc/external.adoc
+++ b/doc/external.adoc
@@ -4,10 +4,9 @@
 
 ==== Configuration
 
-When creating a FOLIO data source, use the `module 'folio'` option,
-and set `trimschemaprefix` to remove the tenant from schema names and
-`addschemaprefix` to add a `folio_` prefix to the schema names.  For
-example:
+When creating a FOLIO data source, use the `module 'folio'` option, and set
+`trimschemaprefix` to remove the tenant from schema names and `addschemaprefix`
+to add a `folio_` prefix to the schema names.  For example:
 
 ----
 CREATE DATA SOURCE folio TYPE kafka OPTIONS (
@@ -21,12 +20,11 @@ CREATE DATA SOURCE folio TYPE kafka OPTIONS (
 );
 ----
 
-It is recommended to use a separate Kafka cluster, rather than the
-FOLIO Kafka instance, until one has experience with administration of
-Kafka.
+It is recommended to use a separate Kafka cluster, rather than the FOLIO Kafka
+instance, until one has experience with administration of Kafka.
 
-In the Debezium PostgreSQL connector configuration, the following
-exclusions are suggested:
+In the Debezium PostgreSQL connector configuration, the following exclusions
+are suggested:
 
 ----
 "schema.exclude.list": "public,.*_mod_login,.*_mod_pubsub,.*pubsub_config,supertenant_mod_.*,.*_mod_kb_ebsco_java,.*_mod_data_export_spring"
@@ -38,10 +36,10 @@ exclusions are suggested:
 ==== MARC transformation
 
 Metadb transforms MARC records in the table
-`folio_source_record.marc_records_lb` to a tabular form which is
-stored in a new table `folio_source_record.marctab`.  This
-transformation runs automatically, usually every few hours.  The time
-of the most recent update can be retrieved via SQL:
+`folio_source_record.marc_records_lb` to a tabular form which is stored in a
+new table `folio_source_record.marctab`.  This transformation runs
+automatically, usually every few hours.  The time of the most recent update can
+be retrieved via SQL:
 
 ----
 SELECT updated
@@ -51,13 +49,13 @@ SELECT updated
 
 ==== Derived tables
 
-FOLIO derived tables are automatically updated once per day, usually
-at about 00:00:00 UTC by default.
+FOLIO derived tables are automatically updated once per day, usually at about
+00:00:00 UTC by default.
 
 === ReShare
 
-Before defining a ReShare data source, create a data origin for each
-consortial tenant.  For example:
+Before defining a ReShare data source, create a data origin for each consortial
+tenant.  For example:
 
 ----
 CREATE DATA ORIGIN tenant1;
@@ -74,9 +72,8 @@ CREATE DATA ORIGIN currently requires restarting the server before it
 will take effect.
 ****
 
-Then use the `module 'reshare'` option when creating the data source,
-and set `addschemaprefix` to add a `reshare_` prefix to the schema
-names:
+Then use the `module 'reshare'` option when creating the data source, and set
+`addschemaprefix` to add a `reshare_` prefix to the schema names:
 
 ----
 CREATE DATA SOURCE reshare TYPE kafka OPTIONS (
@@ -89,20 +86,18 @@ CREATE DATA SOURCE reshare TYPE kafka OPTIONS (
 );
 ----
 
-Note that the order of commands is important: The initial set of data
-origins should be created before the data source is created so that
-schema names of incoming data will be processed correctly.  Later,
-whenever a new consortial tenant is to be added, it should be defined
-in Metadb using `CREATE DATA ORIGIN` (and the server restarted) before
-the tenant is added to ReShare.
+Note that the order of commands is important: The initial set of data origins
+should be created before the data source is created so that schema names of
+incoming data will be processed correctly.  Later, whenever a new consortial
+tenant is to be added, it should be defined in Metadb using `CREATE DATA
+ORIGIN` (and the server restarted) before the tenant is added to ReShare.
 
-In the Debezium PostgreSQL connector configuration, it is suggested
-that credentials (`.+mod_login`), the public schema, the Okapi
-supertenant (`supertenant_mod_.+`), and mod-pubsub data
-(`pubsub_config,.+_mod_pubsub`) be excluded using the
-`schema.exclude.list` setting.
+In the Debezium PostgreSQL connector configuration, it is suggested that
+credentials (`.+mod_login`), the public schema, the Okapi supertenant
+(`supertenant_mod_.+`), and mod-pubsub data (`pubsub_config,.+_mod_pubsub`) be
+excluded using the `schema.exclude.list` setting.
 
 ==== Derived tables
 
-ReShare derived tables are automatically updated once per day, usually
-at about 00:00:00 UTC by default.
+ReShare derived tables are automatically updated once per day, usually at about
+00:00:00 UTC by default.
