Update documentation on ps function

--- a/doc/commands.adoc
+++ b/doc/commands.adoc
@@ -149,6 +149,7 @@ This table summarizes the type adjustments that are performed:
 
 |`ps()`
 |table (
+    dbname text,
     username text,
     state text,
     realtime text,
