--- a/doc/metadb.adoc
+++ b/doc/metadb.adoc
@@ -4,7 +4,7 @@
 
 // Text is styled using "pre-wrap" and wrapped at column 79.
 
-= Metadb 1.0 Documentation
+= Metadb Documentation
 :toc: left
 :toclevels: 3
 :toc-title: Contents
